@@ -1,4 +1,7 @@
 FFmpegThumbnailer
+version ?.?.?
+- Writing to stdout is now supported
+
 version 2.0.2
 - Fixed compilation error against latest ffmpeg
 - Size of the filmstrip overlay is dependant on thumbnail size
